--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!-- 使用相对路径引用图片 -->
+<a href="https://julongfund.com">
 <img 
      src="34c26b17-5a8e-4304-8160-f0670d0a44a8.png" 
      alt="内容页面"
      style="max-width: 100%; height: auto;"
      loading="lazy"
 >
+</a>
 
 <p>该页面将跳转至 <a href="https://julongfund.cn">julongfund.cn</a></p>
 <p><a href="https://beian.miit.gov.cn">备案号“粤ICP备20012939号”</a></p>
