--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- 使用相对路径引用图片 -->
-<a href="https://julongfund.com">
+<a href="https://julongfund.cn">
 <img 
      src="34c26b17-5a8e-4304-8160-f0670d0a44a8.png" 
      alt="内容页面"
