--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 >
 </a>
 
-<p>该页面将跳转至 <a href="https://julongfund.cn">julongfund.cn</a></p>
+<meta http-equiv="refresh" content="3; url=https://julongfund.cn">
+<p>3 秒后自动跳转，<a href="https://julongfund.cn">点这里立即过去</a>。</p>
 <p><a href="https://beian.miit.gov.cn">备案号“粤ICP备20012939号”</a></p>
